--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p style="text-align:center">
     This will show in the center
     </p>
-    <p style="text-align=right">
+    <p style="text-align:right">
     This will show in the right.
     </p>
     </section>
